@@ -1,3 +1,8 @@
+2004-12-29  Eric B. Weddington  <ericw@evcohs.com>
+
+    * include/avr/sleep.h: Fix bugs #6352, #10489, #11425.
+    * NEWS: Update bugs fixed list.
+
 2004-12-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* libc/stdio/vfprintf.c: Fix zero-padding when precision
